2008-10-30  Robert Staudinger  <robsta@gnome.org>

	* TODO:
	* cccss/example-1.c (paint_css):
	* ccss/ccss-selector-group-priv.h:
	* ccss/ccss-selector-group.c (ccss_selector_group_apply_type):
	* ccss/ccss-selector-group.h:
	* ccss/ccss-selector.c (ccss_selector_apply):
	* ccss/ccss-stylesheet.c (ccss_stylesheet_query_type):
	* ccss/ccss-stylesheet.h:
	* doc/tmpl/stylesheet.sgml:
	* examples/example-1.c (main):
	Simplification of the type-based one-shot query API.

2008-10-30  Robert Staudinger  <robsta@gnome.org>

	* ccss/ccss-selector-group-priv.h:
	* ccss/ccss-selector-group.c (traverse_query), (traverse_apply),
	(ccss_selector_group_apply):
	* ccss/ccss-selector.c (match_antecessor_r), (ccss_selector_query),
	(ccss_selector_apply):
	* ccss/ccss-selector.h:
	* ccss/ccss-style.c:
	* ccss/ccss-style.h:
	* ccss/ccss-stylesheet.c (ccss_stylesheet_query):
	* ccss/ccss.sym.in:
	* doc/tmpl/ccss-unused.sgml:
	* doc/tmpl/selector_group.sgml:
	* doc/tmpl/stylesheet.sgml:
	Get rid of gce-specifiy viewport API.

2008-10-30  Robert Staudinger  <robsta@gnome.org>

	* cccss/example-1.c (paint_css):
	* ccss/ccss-selector-group-priv.h:
	* ccss/ccss-selector-group.h:
	* ccss/ccss-stylesheet.h:
	* ccss/ccss.sym.in:
	* doc/ccss-sections.txt:
	Review public API with regard to selector groups.

2008-10-30  Robert Staudinger  <robsta@gnome.org>

	* cccss/cccss.c (cccss_paint): fix example.

	* ccss/ccss-selector-group-priv.h:
	* ccss/ccss-selector-group.c (compare), (ccss_selector_group_new),
	(ccss_selector_group_free), (ccss_selector_group_add_selector),
	(ccss_selector_group_merge), (ccss_selector_group_merge_base),
	(traverse_query), (ccss_selector_group_query),
	(ccss_selector_group_apply), (ccss_selector_group_apply_type),
	(ccss_selector_group_dump):
	* ccss/ccss-selector-group.h:
	* ccss/ccss-selector.c (match_antecessor_r), (ccss_selector_query):
	* ccss/ccss-selector.h:
	* ccss/ccss-stylesheet.c (collect_type_r), (ccss_stylesheet_query):
	* ccss/ccss-stylesheet.h: