@@ -208,7 +208,7 @@ AC_SUBST(GTK_VERSION)
 ### Checks for header files. ###################################################
 
 AC_HEADER_STDC
-AC_CHECK_HEADERS([stdbool.h stdint.h stdio.h stdlib.h string.h])
+AC_CHECK_HEADERS([stdbool.h stddef.h stdint.h stdio.h stdlib.h string.h])
 
 
 ### Checks for typedefs, structures, and compiler characteristics. #############
