@@ -46,11 +46,13 @@ ccss_node_t
 @is_a: 
 @get_container: 
 @get_base_style: 
+@get_instance: 
 @get_id: 
 @get_type: 
 @get_class: 
 @get_pseudo_class: 
 @get_attribute: 
+@get_style: 
 @get_viewport: 
 @release: 
 
@@ -64,6 +66,15 @@ ccss_node_t
 
 
 <!-- ##### USER_FUNCTION ccss_node_get_base_style_f ##### -->
+<para>
+
+</para>
+
+@self: 
+@Returns: 
+
+
+<!-- ##### USER_FUNCTION ccss_node_get_instance_f ##### -->
 <para>
 
 </para>
@@ -115,6 +126,15 @@ ccss_node_t
 
 @self: 
 @name: 
+@Returns: 
+
+
+<!-- ##### USER_FUNCTION ccss_node_get_style_f ##### -->
+<para>
+
+</para>
+
+@self: 
 @Returns: 
 
 
